--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Software/Firmware/pico-sdk"]
 	path = Software/Firmware/pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk
+[submodule "Software/Firmware/pico-ssd1306"]
+	path = Software/Firmware/pico-ssd1306
+	url = https://github.com/daschr/pico-ssd1306
