feat: add a PKGBUILD

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .vscode
 Software/Firmware/build
-Software/Companion App/pscreenapp
-Software/Companion App/pscreenapp.exe
+Software/Companion App/pscreen
+Software/Companion App/pscreen.exe
