--- a/Software/Packaging/Arch/PKGBUILD
+++ b/Software/Packaging/Arch/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Louis Dalibard <louis.dalibard@gmail.com>
 _pkgbase="pscreen"
 pkgname="$_pkgbase-git"
-pkgver=r41.g6d7e691
+pkgver=r42.ga40c813
 pkgrel=1
 pkgdesc="A companion app for the pScreen desktop clock"
 arch=("x86_64" "armv7h" "aarch64")
@@ -34,5 +34,5 @@ build() {
 }
 	
 package() {
-	install -Dm755 "${srcdir}/${_pkgbase}/Software/Companion App/${_pkgbase}" "${_pkgbase}/usr/bin/${_pkgbase}"
+	install -Dm755 "${srcdir}/${_pkgbase}/Software/Companion App/${_pkgbase}" "${pkgdir}"/usr/bin/${_pkgbase}
 }
